--- a/src/components/Post/styles.css
+++ b/src/components/Post/styles.css
@@ -1,7 +1,7 @@
 .post-wrapper {
-  width: 500px;
+  max-width: 600px;
   background: #fff;
-  margin-top: 10px;
+  margin: 10px 10px 0;
   border-radius: 3px;
   border: 1px solid #dddfe2;
   box-shadow: 0 0 5px #dddfe2;
